# boredwithels

./: .gitignore  README.md
tui-bookworm/: LICENSE  README.md  pyproject.toml
tui-kitapkurdu/: .gitignore  README.md  pyproject.toml
tui-kitapkurdu/src/kitapkurdu/: __init__.py  __main__.py  app.py  importer.py  library.py  reflow.py  theme.py
tui-kitapkurdu/src/kitapkurdu/archiveorg/: client.py  models.py
tui-kitapkurdu/src/kitapkurdu/gutenberg/: client.py
tui-kitapkurdu/src/kitapkurdu/screens/: bookshelf.py  file_open.py  reader.py  search.py
tui-kitapkurdu/src/kitapkurdu/styles/: kitapkurdu.tcss
tui-kitapkurdu/src/kitapkurdu/wikisource/: client.py  models.py
tui-kitapkurdu/tests/: test_archiveorg.py  test_gutenberg.py  test_importer.py  test_library.py  test_reflow.py  test_wikisource.py
tui-kittytype/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
tui-kittytype/scripts/: generate_wordlists.py
tui-kittytype/src/kittytype/: __init__.py  __main__.py  app.py  config.py  theme.py
tui-kittytype/src/kittytype/core/: engine.py  stats.py  text_source.py
tui-kittytype/src/kittytype/data/words/: en_easy.txt  en_hard.txt  en_medium.txt  tr_easy.txt  tr_hard.txt  tr_medium.txt
tui-kittytype/src/kittytype/lyrics/: client.py  models.py
tui-kittytype/src/kittytype/screens/: main_menu.py  options.py  results.py  song_search.py  typing.py
tui-kittytype/src/kittytype/styles/: kittytype.tcss
tui-kittytype/src/kittytype/widgets/: gif_cat.py  live_stats.py  typing_area.py
tui-kittytype/tests/: test_core.py
youtube-terminal/: .gitignore  README.md  watch-together  watch-together-lan  yt-vscode  (+2 more)
(+21 files in other folders)
