[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kittytype"
version = "0.1.0"
description = "Terminalde calisan siyah-pembe temali yazma hizi (typing speed) testi: rastgele kelime ve sarki sozu modlariyla."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Elif Kaynar" }]
keywords = ["typing", "tui", "terminal", "textual", "wpm", "monkeytype"]
dependencies = [
    "textual~=8.2",
    "httpx>=0.27",
    "Pillow>=10",
]

[project.optional-dependencies]
dev = ["wordfreq~=3.1", "pytest", "ruff"]

[project.scripts]
kittytype = "kittytype.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kittytype"]

[tool.ruff]
line-length = 100
target-version = "py39"
